--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+  const password = prompt("Enter password to access this site:");
+  if (password !== "gunay123") {
+    document.body.innerHTML = "<h2>Access Denied</h2>";
+  }
+</script>
   </body>
 </html>
